--- a/jiline.html
+++ b/jiline.html
@@ -129,17 +129,17 @@
 <body>
     <div class="container">
         <div class="image-section">
-            <img src="assets/img/avatar-1.png" alt="">
+            <img src="assets/img/avatar-3.png" alt="">
         </div>
         <div class="text-content">
-            <span>Martin Monda</span>
-            <span>"kiffy eater"</span>
-            <p>Super Power: water proof<br>
-               Alias: Aquaman</p>
-            <a href="assets/document/monda resume.pdf" download=""><button class="btn">Download CV</button></a>
+            <span>Jiline Refugio</span>
+            <span>"Sea Turtle"</span>
+            <p>Super Power: unlocked<br>
+               Alias: pagong</p>
+            <a href="assets/document/jiline resume.png" download=""><button class="btn">Download CV</button></a>
             <div class="social-media">
                 <i class='bx bxl-instagram-alt'></i>
-                <a href="https://www.facebook.com/martin.monda.988" style="text-decoration: none;"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="https://www.facebook.com/jiline.refugio" style="text-decoration: none;"><i class='bx bxl-facebook-circle'></i></a>
                 <a><i class='bx bxl-twitter'></i></a>
             </div>
         </div>
