--- a/Noe.html
+++ b/Noe.html
@@ -12,7 +12,7 @@
         margin: 0;
         padding: 0;
         font-family: poppins;
-        color: #fff;
+        color: #000;
     }
 
     body{
@@ -20,13 +20,13 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        background: #222;
+        background: #FBF3D5;
     }
 
     .container{
         height: 470px;
         width: 350px;
-        border: 2px solid #0cf;
+        border: 2px solid #9CAFAA;
         border-radius: 5px;
         display: flex;
         justify-content: space-around;
@@ -37,7 +37,7 @@
     .container .image-section{
         height: 280px;
         width: 280px;
-        background: #021a2f;
+        background: #9CAFAA;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -52,7 +52,7 @@
     img{
         width: 250px;
         border-radius: 50%;
-        background: #021a2f;
+        background: #9CAFAA;
     }
 
     .text-content{
@@ -88,9 +88,9 @@
         width: 100px;
         font-size: 15px;
         font-weight: 500;
-        background: #222;
-        color: #0cf;
-        border: 2px solid #0cf;
+        background: #9CAFAA;
+        color: #fff;
+        border: 2px solid #9CAFAA;
         cursor: pointer;
         margin-bottom: 20px;
         transition: .5s;
@@ -110,13 +110,13 @@
         cursor: pointer;
         height: 40px;
         width: 40px;
-        border: 2px solid #0cf;
+        border: 2px solid #9CAFAA;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
         font-size: 30px;
-        color: #0cf;
+        color: #9CAFAA;
         transition: .4s;
     }
 
