--- a/Noe.html
+++ b/Noe.html
@@ -138,9 +138,9 @@
                Alias: Allahu Akbar</p>
             <a href="assets/document/noe resume.pdf" download=""><button class="btn">Download CV</button></a>
             <div class="social-media">
-                <i class='bx bxl-instagram-alt'></i>
+                <a href="noinsta.html" style="text-decoration: none;"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100012185922702" style="text-decoration: none;"><i class='bx bxl-facebook-circle'></i></a>
-                <a><i class='bx bxl-twitter'></i></a>
+                <a href="notwitter.html" style="text-decoration: none;"><i class='bx bxl-twitter'></i></a>
             </div>
         </div>
     </div>
