--- a/monda.html
+++ b/monda.html
@@ -138,9 +138,9 @@
                Alias: Aquaman</p>
             <a href="assets/document/monda resume.pdf" download=""><button class="btn">Download CV</button></a>
             <div class="social-media">
-                <i class='bx bxl-instagram-alt'></i>
+                <a href="noinsta.html" style="text-decoration: none;"><i class='bx bxl-instagram-alt' style="text-decoration: none;"></i></a>
                 <a href="https://www.facebook.com/martin.monda.988" style="text-decoration: none;"><i class='bx bxl-facebook-circle'></i></a>
-                <a><i class='bx bxl-twitter'></i></a>
+                <a href="notwitter.html" style="text-decoration: none;"><i class='bx bxl-twitter'></i></a>
             </div>
         </div>
     </div>
