--- a/Noe.html
+++ b/Noe.html
@@ -133,7 +133,7 @@
         </div>
         <div class="text-content">
             <span>Noe Humilde</span>
-            <span>"Pussi Destroyer"</span>
+            <span>"Boy Scatter"</span>
             <p>Super Power: unlocked<br>
                Alias: Allahu Akbar</p>
             <a href="assets/document/noe resume.pdf" download=""><button class="btn">Download CV</button></a>
