--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 
     <section class="container">
        <div class="card__container swiper">
+         <div class="taytel">
+            <p>Members</p>
+         </div>
           <div class="card__content">
              <div class="swiper-wrapper">
                 <article class="card__article swiper-slide">
@@ -73,7 +76,7 @@
                    <div class="card__data">
                       <h3 class="card__name">Noe Humilde</h3>
                       <p class="card__description">
-                         Pussi Destroyer
+                         Boy Scatter
                       </p>
     
                       <a href="Noe.html" class="card__button">More Info</a>
